fixed validator profile UI overflow issue

--- a/MVC/public/assets/css/dashboard/validatorProfileDisplay.css
+++ b/MVC/public/assets/css/dashboard/validatorProfileDisplay.css
@@ -18,16 +18,17 @@
 
 .pd_content {
     width: 50%;
-    height: 70%;
+    max-height: 80vh;
     background: rgb(221, 235, 255);
     border: solid var(--mid) 5px;
     display: flex;
     margin-top: 80px;
-    border-radius: 60px;
+    border-radius: 10px;
     padding: 50px;
     position: relative;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 
     h1 {
         color: var(--darkpurple);
@@ -62,13 +63,13 @@
 .backBtn {
     background-image: var(--submit_btn_gradient);
     color: white;
-    width: 150px;
-    height: 100px;
+    width: 100px;
+    height: 50px;
     border-radius: 15px;
     font-size: 30px;
     font-weight: bold;
-    right: 30px;
-    bottom: 30px;
+    top: 10px;
+    right: 10px;
     position: absolute;
     transition: 0.3s ease;
     cursor: pointer;
@@ -128,7 +129,7 @@
     border: solid var(--mid) 5px;
     display: flex;
     margin-top: 80px;
-    border-radius: 60px;
+    border-radius: 10px;
     padding: 50px;
     position: relative;
     flex-direction: column;
@@ -146,10 +147,13 @@
     padding: 5px;
     justify-content: space-between;
     position: relative;
+    flex-direction: column;
 }
 
 .input-field label {
     align-content: center;
+    font-weight: bold;
+    padding-bottom: 5px;
 }
 
 .input-field img {
@@ -161,7 +165,7 @@
 
 .input-field .eye {
     position: absolute;
-    top: 0.7rem;
+    top: 2rem;
     right: 0.8rem;
     width: 25px !important;
     height: 25px !important;
@@ -184,12 +188,12 @@ input {
 .form_btns {
     display: flex;
     justify-content: center;
-    gap: 200px;
+    gap: 20px;
     margin-top: 20px;
 }
 
 .form_btns button {
-    width: 120px;
+    width: 100%;
     height: 55px;
     padding: 10px 20px;
     font-size: 16px;
